staging/src/slime.io/slime/modules/lazyload/controllers/testdata/autofence.base.input.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lazyload
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: lazyload
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: foo
  type: ClusterIP
