staging/src/slime.io/slime/modules/lazyload/controllers/testdata/autofence.base.expect.sidecar.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: foo
  namespace: lazyload
spec:
  egress:
  - hosts:
      - "istio-system/*"
      - "mesh-operator/*"
  workloadSelector:
    labels:
      app: foo
